# home_rust

./: Cargo.toml  abfuhrtermine.ics  einzel.txt  smartmeter.txt  wetter Kopie.json  wetter.json  xmltest.txt
src/: fritz.rs  http.rs  main.rs  muell.rs  sonnen.rs  strom.rs  udplog.rs  wallbox.rs  wandler.rs  wetter.rs
