[package]
name = "http_test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
quick-xml = "0.36.1"
rumqttc = "0.24.0"
json = "0.12.4"
chrono = "0.4.38"
